@@ -1,5 +1,15 @@
 2008-01-17  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet-dbus-settings.c
+	  src/applet-dbus-settings.h
+		- (update_user_connections): new function; factor out common code to
+			update user connections
+		- (applet_dbus_settings_list_connections): use update_user_connections()
+		- (applet_dbus_settings_get_all_connections): new function; return a
+			a GSList of all connections (both system and user)
+
+2008-01-17  Dan Williams  <dcbw@redhat.com>
+
 	* src/utils/utils.h
 	  src/utils/utils.c
 		- (utils_filter_connections_for_device): new function; given a list of
